assets/common.scss
$color-light:           #FFF7F9;
$color-dark:            #201F1E;
$color-accent:          #4A8ECC;
$color-accent-light:    #4FB1F4;
$color-accent-alt:      #A66BE5;
$text-color:            #DEDEDE;
$text-color1:           #999999;
$text-color2:           #666666;
$text-color3:           #333333;
$text-color-disabled:   #494949;
$text-color-selected:   #c65f00;

$color-surface-light1:  #FFFFFF;
$color-surface-light2:  #666666;
$color-surface-light3:  #EEEEEE;
$color-surface-dark1:   #030303;
$color-surface-dark2:   #121212;
$color-surface-dark3:   #181818;
$color-surface-dark4:   #333333;

$color-chat-text1:      #DEDEDE;
$color-chat-text2:      #B9B9B9;
$color-chat-text3:      #838383;
$color-chat-time:       #26383b;
$color-chat-disabled:   #414141;
$color-chat-place:      #666666;

$color-chat-tagged:     #232323;
$color-chat-highlight:  #002547;
$color-chat-emphasize:  #151515;
$color-chat-bg:         #080808;

$color-label-bot:       #0088CC;
$color-label-bot2:      #929292;
$color-label-user:      #bbbbbb;
$color-label-sub1:      #59AEEA;
$color-label-sub2:      #2ADDC8;
$color-label-sub3:      #4DB524;
$color-label-sub4:      #dd29d2;
$color-label-admin:     #B91010;
$color-user-label-background: #181818;
$color-broadcaster:     #E79015;
$color-label-vip:       #DB4C1C;
$color-green-text:      #6CA528;
$color-green-text-highlight: #6fb623;
$color-link:            #02C2FF;
$color-link-hover:      #0088CC;
$color-link-visited:    #A66BE5;
$color-text-broadcast:  #EDEA12;
$color-underline-nsfl:  #FFF000;
$color-underline-nsfw:  #FF0000;

$tag-color-map: (
    green:           #1ba400,
    yellow:          #e9df25,
    orange:          #f5a74e,
    red:             #e63535,
    purple:          #906cf0,
    blue:            #0662db,
    sky:             #7eeeff,
    lime:            #3beb7e,
    pink:            #f37bb7,
    black:           #4d4d4d
);

